<resources>
    <string name="app_name">狱务通</string>
    <string name="app_v">V </string>
    <string name="alarm_reminder_msg">闹钟提醒已开启，如您有即将会见的档期，系统将会在会见开始前5分钟以闹钟形式提醒您，请注意手机状态。</string>
    <string name="agreement">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;国科狱务公开APP是由国科政信科技（北京）股份有限公司开发的一款监狱类软件，用于服刑人员家属、社会各界人士知悉服刑情况和监狱狱务情况。请您在使用本软件前仔细阅读如下条款。您的安装使用行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。\n
一、	许可证的授予。本《协议》授予您下列权利：\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;您可安装、复制、分发和传播本产品来使用，但您必须保证每一份复制、分发和传播都必须是完整和真实的。\n
二、其它权利和限制说明。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;本软件针对家属和社会人员有不同的设置，家属可以获得服刑人员相关服刑信息，社会人事只能获得监狱允许范围内的相关信息。
本软件需付费使用，个人使用授权版本只能由单个用户在一台或多台手机上亲自使用；
您不得对本软件产品进行反向工程、反向编译和反向汇编，不得删除本软件及其他副本上一切关于版权的信息，不得制作和提供该软件的注册机及破解程序。除非适用法律明文允许上述活动，否则您必须遵守此协议限制。
最终解释权归国科政信科技（北京）股份有限公司所有。
</string>
    <string name="tanjian_notice">会见须知：\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;狱务通为您提供方便快捷的会见申请服务，申请通过后，您即可在约定的时间内前往监狱会见。\n1、根据规定，服刑人员每月只能接受两次及以内的探视服务。\n2、部分服刑人员不提供探视服务。\n3、狱务通会见服务暂时只对直系近亲属开放，请谅解。\n4、本服务端每月只能提交3次会见申请，请勿无故提交，以免浪费机会。</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="meeting_notice"><![CDATA[注意：\n        请确保视频内都是您的亲人，不是请及时告知狱警。\n        请注意通话不涉及犯罪、国家机密等内容，否则您将失去并可能永久失去远程会见机会。\n        请注意时间长短，不要影响后面的狱友使用。\n        若您在通话过程中有任何问题，请及时联系狱警沟通解决。]]></string>
    <string name="meeting_note">使用说明： \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;狱务通为您提供亲情电话服务，您可以通过狱务通和服刑人员进行远程视频通话。 在申请亲情电话前，请您详细阅读以下注意事项：\n1、服刑人员每月可亲情电话次数不限。 \n2、部分服刑人员不提供亲情电话服务。 \n3、狱务通软件暂时只提供直系亲属进行亲情电话，请谅解。 \n4、根据安全要求，您的通话信息可能会被记录。 \n5、每次亲情电话需缴纳一定服务费用，收费方为国科政信(北京)股份有限公司。现在体验期间完全免费，请勿无故提亲情电话申请。</string>
    <string name="alarm_remind"><![CDATA[        温馨提示：您的远程视频会见即将开始，请打开狱务通连接好网络做好准备。]]></string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="enable_logined">登录后可用</string>
    <string name="main_get_contact">联系人</string>
    <string name="main_get_vconf_contact">搜索联系人</string>
    <string name="main_get_vconf_list">获取会议列表</string>
    <string name="make_call">呼叫点对点会议</string>
    <string name="muti_call">呼叫多点会议</string>
    <string name="main_create_vconf">创建视频会议</string>
    <string name="main_setting">设置</string>
    <string name="main_logout">注销</string>
    <string name="server_adds">服务器地址</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login_text">登录</string>
    <string name="login_off">退出</string>
    <string name="vconf_shortNum">会议号码</string>
    <string name="vconf_time">会议时间</string>
    <string name="vconf_timeLen">会议时长</string>
    <string name="vconf_info_title">会议信息</string>
    <string name="vconf_convene">正在召集</string>
    <string name="vconf_call">正在呼叫</string>
    <string name="vconf_join">正在加入</string>
    <string name="vconf_join_waitingTxt_p2p">请求与您通话</string>
    <string name="vconf_join_waitingTxt_mul">邀请您进入会议</string>
    <string name="vconf_audio_waiting">音频呼叫中</string>
    <string name="vconf_QualityMeetings">视频质量会议</string>
    <string name="vconf_Apply4AdministrativePrivileges">申请管理权限</string>
    <string name="vconf_releaseAdministrativePrivileges">释放管理权限</string>
    <string name="vconf_Apply4Speaker">申请发言</string>
    <string name="vconf_StatisticalInformation">统计信息</string>
    <string name="vconf_ExitConf">退出会议</string>
    <string name="vconf_EndConf">结束会议</string>
    <string name="vconf_flow_remind">电话应答将为您节省流量</string>
    <string name="vconf_chooseJoinWay_3GInfo_mobile">在移动数据网络环境下会影响视音频质量，\n并产生手机流量，可选择电话方式入会</string>
    <string name="vconf_chooseJoinWay_3GInfo_normal">在移动数据网络环境下会影响视音频质量，\n并产生手机流量</string>
    <string name="vconf_tel_response">电话</string>
    <string name="vconf_video_response">视频接听</string>
    <string name="vconf_audio_response">音频接听</string>
    <string name="vconf_answer">接听</string>
    <string name="vconf_2g_unable_tel_join">在当前的网络下您不能进行音视频通话，请使用电话应答入会</string>
    <string name="vconf_canceled">已取消</string>
    <string name="vconf_rejected">已拒绝</string>
    <string name="vconf_noresponse">无人应答</string>
    <string name="vconf_unconnect">未接通</string>
    <string name="vconf_sending_desktop">正在接收双流</string>
    <string name="telephonereceiver_open_info">听筒模式已关</string>
    <string name="telephonereceiver_close_info">听筒模式已开</string>
    <string name="vconf_quit_msg">您确定退出会议吗？</string>
    <string name="vconf_end_msg">您确定结束会议吗？</string>
    <string name="vconf_quit">退出</string>
    <string name="vconf_end">结束</string>
    <string name="hang_up">挂断</string>
    <string name="more_info">更多</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="definition">清晰度</string>
    <string name="microphone">麦克风</string>
    <string name="speaker">扬声器</string>
    <string name="add_text">添加</string>
    <string name="app_company_name">国科政信（北京）股份有限公司</string>
    <string name="app_copy_rights">copyright©2006-2015.All right reserved</string>
    <string name="register">注册</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="switch_login_type">切换登录方式</string>
    <string name="login_without_account">无账号快捷登录</string>
    <string name="id_code">身份证号码</string>
    <string name="phone_number">手机号码</string>
    <string name="personal_info">请输入注册信息</string>
    <string name="null_phone">手机号码为空</string>
    <string name="unavailable_phone">手机号码不存在</string>
    <string name="verify_failed">验证码请求失败，请稍后再试</string>
    <string name="code_200">200</string>
    <string name="sended">已发送</string>
    <string name="login_failed_retry">登录失败，请稍后再试</string>
    <string name="unexist_account">用户不存在注册未通过，请注册成功后使用！</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="login_exception_retry">登录异常，请稍后再试</string>
    <string name="login_success">登录成功</string>
    <string name="account_pwd_error">手机号或者身份证号错误</string>
    <string name="server_busy">服务器繁忙</string>
    <string name="network_error">网络出错，请检查网络</string>
    <string name="time_out">请求超时，请稍后再试</string>
    <string name="illegal_control">非法操作或没有权限</string>
    <string name="account_disable">您的账号已被禁用</string>
    <string name="server_error">服务器错误</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="pwd_empty">密码为空</string>
    <string name="logining">正在登录...</string>
    <string name="sending">正在发送...</string>
    <string name="id_empty">身份证号码为空</string>
    <string name="verify_code_empty">验证码不能为空</string>
    <string name="unexist_id_num">身份证号不存在</string>
    <string name="name">姓名</string>
    <string name="prisoner_relationship">与服刑人员关系</string>
    <string name="prisoner_code">囚号</string>
    <string name="prison_select">监狱选择</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="upload_id_photo">请上传您的身份证正反面照</string>
    <string name="readed_agree">我已阅读并同意</string>
    <string name="soft_use_agreement">《狱务通软件使用协议》</string>
    <string name="giveup_make_content">放弃已编辑的内容吗？</string>
    <string name="upload_avatar">上传头像</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="read_file_error">读取文件出错</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从相册中选择</string>
    <string name="back">返回</string>
    <string name="choose_avatar">请选择头像</string>
    <string name="null_name">姓名为空</string>
    <string name="input_relationship">请输入您与服刑人员的关系</string>
    <string name="null_prisoner_num">囚号为空</string>
    <string name="input_prison_name">请输入监狱名称</string>
    <string name="registering">正在注册...</string>
    <string name="exception">异常</string>
    <string name="not_open_prison">抱歉，暂未开通此监狱</string>
    <string name="register_failed_retry">注册请求失败，请稍后再试</string>
    <string name="code_404">404</string>
    <string name="code_501">501</string>
    <string name="register_success">注册成功!</string>
    <string name="register_failed">注册失败！</string>
    <string name="main_page">首页</string>
    <string name="visit_prison">亲情电话</string>
    <string name="canteen">电子商务</string>
    <string name="please_login">请登录</string>
    <string name="reminder">提示</string>
    <string name="register_confirm_remind">即将提交注册，注册信息将会严格审核，注册信息一旦通过，将不可修改，确定提交？</string>
    <string name="confirm_again">再确认一下</string>
    <string name="get_info_failed">获取用户信息失败，请重新登录</string>
    <string name="loading">加载中...</string>
    <string name="kickout_remind">账号下线提示</string>
    <string name="relogin">重新登录</string>
    <string name="focus_">焦点关注</string>
    <string name="focus_news_title">焦点新闻大标题</string>
    <string name="focus_news_simple">焦点新闻简要描述...</string>
    <string name="user_name">用户名</string>
    <string name="account_info">账号信息</string>
    <string name="remittance_record">汇款记录</string>
    <string name="shopping_record">购物记录</string>
    <string name="setting">设置</string>
    <string name="logout">注销</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="no_meeting">暂无记录</string>
    <string name="last_meeting_time">上次通话时间：</string>
    <string name="total_pay">共计:</string>
    <string name="value_0">0</string>
    <string name="rmb">0元</string>
    <string name="choose_pay_ment">选择支付方式</string>
    <string name="pay">支付</string>
    <string name="pay_order">支付订单</string>
    <string name="pay_failed">支付失败</string>
    <string name="zhifubao">支付宝</string>
    <string name="pay_result_confirming">支付结果确认中</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_cancel">支付取消</string>
    <string name="please_wait_send_goods">请耐心等待监狱方发货</string>
    <string name="pay_result">支付结果</string>
    <string name="order_synchronize_failed">支付订单同步失败</string>
    <string name="please_use_release_keystore">请使用正确的app签名文件</string>
    <string name="all_class">全部分类</string>
    <string name="sales_prefer">销量优先</string>
    <string name="buy_car_total">合计:</string>
    <string name="_2">(配送费2元)</string>
    <string name="settlement">结算</string>
    <string name="buy_car">购物车</string>
    <string name="clear_shopping_car">清空购物车</string>
    <string name="please_select_goods">请选择商品</string>
    <string name="get_order_failed">生成订单失败，请稍后再试!</string>
    <string name="not_select_goods">没有选择商品</string>
    <string name="goods_list_update_failed">商品列表更新失败</string>
    <string name="load_failed">加载失败</string>
    <string name="last_pager">已到最后一页</string>
    <string name="requested_choose_other">您已申请过当日远程探监，请选择其他日期。</string>
    <string name="recharge_count">请选择充值金额</string>
    <string name="_50">50元</string>
    <string name="_100">100元</string>
    <string name="recharge">充值</string>
    <string name="recharge_description_info">充值说明:\n1、狱务通为用户免费提供远程探监业务,
        但用户需承担租赁服务器以及视频通话业务的相关费用。\n2、用户充值后,可点击“
        申请远程探监”按钮进行申请,系统审核通过后方扣费,系统审核不通过不扣费。\n3
        、审核通过后,无论您是否接听视频通话,都将扣除一定费用,费用不返还,不累计到下
        一次使用。\n4、当可用次数为“0”时,狱务通远程探监申请将不可点击,请您及时续费。
    </string>
    <string name="contract_us">联系我们</string>
    <string name="company_address_">地址：</string>
    <string name="company_address">北京市海海淀区西三旗昌临813号11号楼</string>
    <string name="email_">邮编：</string>
    <string name="post_code">100086</string>
    <string name="customer_service_phone">客服电话：</string>
    <string name="company_phone">010-82911287-5032</string>
    <string name="commit">提交</string>
    <string name="theme">主题:</string>
    <string name="input_theme">输入主题</string>
    <string name="input_msg_content">输入内容</string>
    <string name="twice_more">* 每月最多提交两次</string>
    <string name="message_record">消息记录</string>
    <string name="my_wallet">亲情电话卡</string>
    <string name="_200">200元</string>
    <string name="_500">500元</string>
</resources>