<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@color/bg"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_login_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textSize="@dimen/register_sex_tv_size"
        android:textColor="@color/tv_mid"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_personal_username"
        style="@style/no_bg"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_login_notice"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_personal_id_code"
        style="@style/no_bg"
        android:layout_below="@+id/et_personal_username"
        android:layout_marginTop="1dp"
        android:hint="@string/id_code"/>

    <LinearLayout
        android:id="@+id/ll_check_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_edittext_height"
        android:layout_below="@+id/et_personal_id_code"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verify_code"
            style="@style/no_bg"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="0dp"
            android:hint="@string/input_verify_code"
            android:inputType="number"/>

       <TextView
           android:id="@+id/tv_send_verify_code"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:layout_marginStart="1dp"
           android:background="@drawable/item_selector"
           android:textColor="@color/theme"
           android:text="@string/send_verify_code"
           android:textSize="@dimen/register_sex_tv_size"
           android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_person_login"
        style="@style/normal_bt"
        android:text="@string/login_text"
        android:layout_below="@id/ll_check_code"
        android:layout_marginTop="20dp"/>

    <!--<Button-->
        <!--android:id="@+id/btn_personal_switch"-->
        <!--style="@style/theme_border_bt"-->
        <!--android:text="@string/switch_login_type"-->
        <!--android:textSize="@dimen/main_body_text"-->
        <!--android:layout_below="@id/btn_person_login"-->
        <!--android:layout_marginTop="10dp"/>-->

    <Button
        android:id="@+id/bt_register"
        android:layout_below="@+id/btn_person_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/register_edittext_height"
        android:gravity="center_vertical|start"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="@dimen/register_sex_tv_size"
        android:textColor="@color/theme"/>

    <Button
        android:id="@+id/bt_fast_login"
        android:layout_below="@+id/btn_person_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/register_edittext_height"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical|end"
        android:text="@string/login_without_account"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="@dimen/register_sex_tv_size"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/theme"/>
</RelativeLayout>
