<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <include layout="@layout/toolbar_layout" />

    <EditText
        android:id="@+id/et_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_edittext_height"
        android:background="@drawable/et_shape_search"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/theme"
        android:hint="@string/input_theme"
        android:textColor="@color/tv_mid"
        android:textSize="@dimen/goods_car_tv_size"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/write_msg_content_height"
        android:background="@drawable/et_shape_search"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:hint="@string/input_msg_content"
        android:gravity="top"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/tv_mid"
        android:textSize="@dimen/goods_car_tv_size"/>

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twice_more"
        android:layout_marginLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="@dimen/goods_car_tv_size"
        android:textColor="@color/tv_gray"/>

    <Button
        android:id="@+id/bt_commit_write_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_edittext_height"
        android:layout_below="@id/tv_notice"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/theme_bg_bt_selector"
        android:text="@string/commit"
        android:textSize="@dimen/total_money_tv_size"
        android:textColor="@color/white"/>
</LinearLayout>
