<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/NavPage"
	android:background="@color/white">

	<include layout="@layout/toolbar_layout"/>

    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal">

		<ImageView
			android:id="@+id/iv_pay_result_icon"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_marginTop="20dp"
			android:src="@drawable/checkpay"/>

		<TextView
			android:id="@+id/tv_pay_result"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/pay_success"
			android:textColor="@color/theme"
			android:textSize="@dimen/logout_tv_size"/>

		<TextView
			android:id="@+id/tv_send_goods"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/please_wait_send_goods"
			android:textSize="@dimen/roll_title_size"/>

		<Button
			android:id="@+id/bt_ok"
			style="@style/normal_bt"
			android:layout_marginTop="20dp"
			android:text="@string/ok"/>
	</LinearLayout>
</LinearLayout>